dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__frame_dispatch__multiple_workers_receive_frames.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=0
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.enq[p2]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p2]=1
0:00:00.000000000 [main] TRACE m#q.router_to_batcher.depth_dist[p2]=1
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p2]=0
0:00:00.000000000 [main] TRACE c#pick_two.chosen[send.0]=1
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=2
