dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__frame_dispatch__sender_drop_shuts_down.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=0
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=0
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=0
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=0
